WebContent/resources/css/body.css
.body {
	background-image: url('../images/math-grid2-blurred.jpg');
	height: 1150px;
	width: 960px;
	margin:0px auto;
	padding:25px;
	font-family: 'Ubuntu', serif;
	font-size: 18px;
}

a {
    color: #ff9999;
    font-weight: bold;
}

.operationHeader {
	font-size: 30px;
	margin-bottom: 10px;
	font-weight: bold;
	color: #ff9999;
}

.operation {
	margin-top: 40px;
	margin-bottom: 40px;
}

.example {
	margin-top: 30px;
	margin-left: 50px;
	margin-bottom: 40px;
}

.ioexample {
	font-weight: bold;
	color: #ff9999;
}

.ioDiv {
	margin-top: 10px;
	margin-left: 80px;
}

table {
    border-collapse: collapse;
    width: 50%;
}

td, th {
    border: 1px solid #ff9999;
    text-align: center;
}

tr:nth-child(even) {
    background-color: #ff9999;
}
.input {
	color: #ff9999;
	margin-top: 20px;
	font-weight: bold;
}
.textarea {
	width: 40%;
	height: 200px;
	border: 3px solid #ff9999;
	padding: 5px;
	background-position: bottom right;
	background-repeat: no-repeat;
	word-break: break-word;
}

.textareaInput {
	float: left;
}

.textareaOutput {
	float: right;
}

.centerInputOutputDiv {
	width: 10%;
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	margin: auto	
}

.buttonSubmit {
	width: 100%;
	margin-top: 10px;
	background: #ff9999;
	border: 2px solid #ff9999;
	font-weight: bold;
	height: 30px;
}

.delimitterInput {
	margin-top: 20px;
	width: 20%;
	border: 2px solid #ff9999;
	height: 20px;
	margin-left: 40%;
	margin-right: 40%;	
}
.result {
	margin-top: 20px;
	font-weight: bold;
	color: #000000;
}

.container {
  position: relative;
}

